modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html><html>
-  <head></head>
+  <head>
+    <meta charset="utf-8">
+    <title>Halaman Profil Bandung</title>
+  </head>
   <body>
     <h1>Bandung</h1>
     <p>
