new file:   assets/styles/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Halaman Profil Bandung</title>
+
+    <!-- My Own Styles -->
+    <link rel="stylesheet" href="assets/styles/style.css" />
   </head>
 
   <body>
@@ -114,18 +117,47 @@
       <!-- Konten samping -->
       <aside>
         <article>
-          <h2>Kota Bandung</h2>
-          <p>Kota Kembang Paris van Java</p>
-          <figure>
-            <img src="assets/image/bandung-badge.png" />
-            <figcaption>Lambang</figcaption>
-          </figure>
+          <header>
+            <h2>Kota Bandung</h2>
+            <p>Kota Kembang Paris van Java</p>
+            <figure>
+              <img src="assets/image/bandung-badge.png" />
+              <figcaption>Lambang</figcaption>
+            </figure>
+          </header>
+
+          <section>
+            <h3>Informasi Lainnya</h3>
+
+            <table>
+              <tr>
+                <th>Negara</th>
+                <td>Indonesia</td>
+              </tr>
+              <tr>
+                <th>Hari jadi</th>
+                <td>25 September 1810</td>
+              </tr>
+              <tr>
+                <th>Luas Total</th>
+                <td>167.67 km<sup>2</sup></td>
+              </tr>
+              <tr>
+                <th>Bahasa Daerah</th>
+                <td>Sunda</td>
+              </tr>
+              <tr>
+                <th>Kode Telepon</th>
+                <td>+62 22</td>
+              </tr>
+            </table>
+          </section>
         </article>
       </aside>
     </main>
 
     <footer>
-      <p>Belajar Dasar Pemrograman Web</p>
+      <p>Belajar Dasar Pemrograman Web
     </footer>
   </body>
 </html>
