modified:   assets/styles/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 
     <!-- My Own Styles -->
     <link rel="stylesheet" href="assets/styles/style.css" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -116,7 +124,7 @@
 
       <!-- Konten samping -->
       <aside>
-        <article>
+        <article class="profile">
           <header>
             <h2>Kota Bandung</h2>
             <p>Kota Kembang Paris van Java</p>
@@ -157,7 +165,7 @@
     </main>
 
     <footer>
-      <p>Belajar Dasar Pemrograman Web
+      <p>Belajar Dasar Pemrograman Web </p>
     </footer>
   </body>
 </html>
